<resources>
    <string name="app_name">GetGifting</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="donation_food_image">Donation food image</string>
    <string name="requests">Requests</string>
    <string name="add">ADD</string>
    <string name="logout">Logout</string>
    <string name="my_requests">My Requests</string>
    <string name="my_donations">My Donations</string>
    <string name="add_donation_image">Add donation image</string>
    <string name="type_of_food">Type Of Food</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="add_donation">ADD DONATION</string>
    <string name="description">Description</string>
    <string name="request_donation">REQUEST DONATION</string>
    <string name="donations">Donations</string>
    <string name="edit_donation">EDIT DONATION</string>
    <string name="edit_image">Edit Image</string>
    <string name="save">SAVE</string>

</resources>