<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chelsea.getgifting.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myDonations"
        android:name="com.chelsea.getgifting.ui.myDonations.MyDonationsFragment"
        android:label="@string/my_donations"
        tools:layout="@layout/fragment_mydonations" />

    <fragment
        android:id="@+id/nav_myRequests"
        android:name="com.chelsea.getgifting.ui.myRequests.MyRequestsFragment"
        android:label="@string/my_requests"
        tools:layout="@layout/fragment_myrequests" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.chelsea.getgifting.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

</navigation>