<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/make_donation_background"
    tools:context=".AddDonations">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/overlayBackground"
        android:paddingStart="130dp"
       android:paddingEnd="10dp"
        app:title="@string/add_donation"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <RelativeLayout
        android:layout_width="358dp"
        android:layout_height="627dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/donation_image"
            android:layout_width="341dp"
            android:layout_height="193dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#CEABABAC"
            android:contentDescription="@string/add_donation_image"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add"
            android:onClick="openGallery"
            />

        <EditText
            android:id="@+id/donationFoodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donation_image"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/type_of_food"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/donationFoodQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/donationFoodType"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:hint="@string/quantity"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donationFoodQuantity"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:hint="@string/location"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/donationDescription"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_below="@+id/location"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <Button
            android:id="@+id/add_new_donation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donationDescription"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttonColor"
            android:padding="15dp"
            android:text="@string/add_donation"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>