<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/make_donation_background"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/gg_logo"
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gg_logo"
        app:layout_constraintBottom_toTopOf="@id/get_gifting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <TextView
        android:id="@+id/get_gifting"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/get_gifting"
        app:layout_constraintBottom_toTopOf="@id/login_cardview"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="332dp"
        android:layout_height="390dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_gifting"
        app:layout_constraintVertical_bias="0.845">


        <TextView
            android:id="@+id/login_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="65dp"
            android:background="@color/buttonColor" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="149dp"
            android:background="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="234dp"
            android:background="@color/cardview_dark_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_btnLogin"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:rippleColor="@color/rippleColor"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="2dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>